# iceflashprog

./: .gitignore  README.md  go.mod  go.sum  main.go
.github/workflows/: main.yml
3d-models/: base.scad  base.stl  cover.scad  cover.stl  settings.scad  test.scad
docs/: 00_index.md  10_assembly.md  20_firmware.md  30_host-software.md
firmware/: CMakeLists.txt  STM32F042KxTx_FLASH.ld  descriptors.c  descriptors.wara  main.c  spi.c  spi.h  spi_flash.c  spi_flash.h  watchdog.c  watchdog.h
internal/bitstream/: bitstream.go
internal/device/: device.go  protocol.go
share/udev/: 60-iceflashprog.rules
